[gd_scene load_steps=26 format=3 uid="uid://cx13sky8kswwi"]

[ext_resource type="Script" path="res://scripts/charger.gd" id="1_eeha0"]
[ext_resource type="Texture2D" uid="uid://cob8u6kp3epyp" path="res://assets/sprites/charger/charger_chasis.png" id="1_n7ts8"]
[ext_resource type="Texture2D" uid="uid://b5eana0kmsxm7" path="res://assets/sprites/charger/charger_fire.png" id="2_xyd3w"]
[ext_resource type="Texture2D" uid="uid://du3hkekb04dtl" path="res://assets/sprites/charger/charger_spike.png" id="3_ah51i"]
[ext_resource type="PackedScene" uid="uid://c143x75y0fkh2" path="res://scenes/enemy_hitbox.tscn" id="5_pv5kt"]
[ext_resource type="PackedScene" uid="uid://c6fcqep6ex77e" path="res://scenes/enemy_hurtbox.tscn" id="6_ahq4i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ecxtn"]
atlas = ExtResource("1_n7ts8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2yow"]
atlas = ExtResource("1_n7ts8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_puudn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecxtn")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2yow")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3niap"]
atlas = ExtResource("3_ah51i")
region = Rect2(0, 0, 27, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmd61"]
atlas = ExtResource("3_ah51i")
region = Rect2(27, 0, 27, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_0s1r8"]
atlas = ExtResource("3_ah51i")
region = Rect2(54, 0, 27, 7)

[sub_resource type="SpriteFrames" id="SpriteFrames_ku74t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3niap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmd61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s1r8")
}],
"loop": false,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_cqsb6"]
atlas = ExtResource("2_xyd3w")
region = Rect2(128, 0, 32, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_und2m"]
atlas = ExtResource("2_xyd3w")
region = Rect2(160, 0, 32, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtecb"]
atlas = ExtResource("2_xyd3w")
region = Rect2(192, 0, 32, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_04vwa"]
atlas = ExtResource("2_xyd3w")
region = Rect2(224, 0, 32, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_abd8b"]
atlas = ExtResource("2_xyd3w")
region = Rect2(0, 0, 32, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6f5a"]
atlas = ExtResource("2_xyd3w")
region = Rect2(32, 0, 32, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqvmt"]
atlas = ExtResource("2_xyd3w")
region = Rect2(64, 0, 32, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4myu"]
atlas = ExtResource("2_xyd3w")
region = Rect2(96, 0, 32, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_5kkcb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqsb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_und2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtecb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04vwa")
}],
"loop": true,
"name": &"charging",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_abd8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6f5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqvmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4myu")
}],
"loop": true,
"name": &"default",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ijk0g"]
size = Vector2(31, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j8fpw"]
size = Vector2(15, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i5xcc"]
size = Vector2(32, 29)

[node name="Charger" type="RigidBody2D"]
z_index = 1
collision_layer = 8
collision_mask = 9
gravity_scale = 0.0
lock_rotation = true
linear_damp_mode = 1
script = ExtResource("1_eeha0")
SPEED = 100
HEALTH = 250

[node name="ChasisSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_puudn")
autoplay = "default"

[node name="SpikeSprite" type="AnimatedSprite2D" parent="ChasisSprite"]
z_index = -1
position = Vector2(17, 7)
sprite_frames = SubResource("SpriteFrames_ku74t")

[node name="FireSprite" type="AnimatedSprite2D" parent="ChasisSprite"]
position = Vector2(-32, 0)
sprite_frames = SubResource("SpriteFrames_5kkcb")
autoplay = "default"

[node name="MovementStopRay" type="RayCast2D" parent="ChasisSprite"]
position = Vector2(0, 13)
target_position = Vector2(31, 0)

[node name="EnemyDetectionRay" type="RayCast2D" parent="ChasisSprite"]
target_position = Vector2(256, 0)
collision_mask = 3

[node name="Hitbox" parent="ChasisSprite" node_paths=PackedStringArray("ENEMY", "SPRITE") instance=ExtResource("5_pv5kt")]
position = Vector2(0.5, 1.5)
ENEMY = NodePath("../..")
SPRITE = NodePath("..")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ChasisSprite/Hitbox"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_ijk0g")
debug_color = Color(0.0587249, 0.649918, 0, 0.42)

[node name="Spike" parent="ChasisSprite" node_paths=PackedStringArray("ENEMY") instance=ExtResource("6_ahq4i")]
position = Vector2(27, 7)
ENEMY = NodePath("../..")
DAMAGE = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChasisSprite/Spike"]
position = Vector2(-3.5, 0)
shape = SubResource("RectangleShape2D_j8fpw")
debug_color = Color(1, 0.0144794, 0.00058604, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -16)
rotation = 1.5708
shape = SubResource("RectangleShape2D_i5xcc")

[node name="ChargeDelay" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CoolDown" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ChargeDelay" to="." method="enter_charging"]
[connection signal="timeout" from="CoolDown" to="." method="enter_wander"]
